# dashboard-rework

./: .gitignore  Cargo.toml  Justfile
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/config-versions/: config-v0.toml  config-v1.toml  config.template.toml
crates/config/src/: lib.rs  migrate.rs  types.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: layout.rs  lib.rs  login.rs  management.rs  process.rs  system.rs  terminal.rs  util.rs
crates/frontend/src/management/: management.css  mod.rs
crates/frontend/src/process/: mod.rs  process.css
crates/frontend/src/system/: mod.rs  system.css
crates/frontend/src/terminal/: mod.rs  terminal.css
crates/hyper_ext/: Cargo.toml
crates/hyper_ext/src/: error.rs  ext_traits.rs  into_response.rs  lib.rs  response_body.rs  websocket.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  main.rs  middleware.rs  routers.rs  static_files.rs
crates/server/src/api/: login.rs  mod.rs  process.rs
crates/server/static/: index.css  main.css  terminal.js
crates/sysdata/: Cargo.toml
crates/sysdata/src/: actions.rs  getters.rs  lib.rs  system.rs  system_cache.rs  types.rs
crates/system_api/: Cargo.toml
crates/system_api/src/: lib.rs
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.tsx  Cards.tsx  index.tsx  types.ts
frontend/src/main-components/: Header.tsx  SidebarMenu.tsx
frontend/src/pages/: Home.tsx
frontend/src/shared-components/: Card.tsx
frontend/src/types/cpu/: index.ts
frontend/src/types/system/: index.ts
schemas/: system.jtd.json
src/: main.rs  sysdata.rs  types.rs
src/frontend/: home.rs  mod.rs  router.rs  vendored.rs
src/frontend/pages/: home.rs  shared.rs
src/router/: api.rs  mod.rs  router.rs  routers.rs
src/sysdata/: getters.rs  mod.rs  system.rs
src/types/: mod.rs
src/types/system/: mod.rs
