[workspace]
members = ["crates/sysdata", "crates/server", "crates/frontend", "crates/config", "crates/auth"]
resolver = "2"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
# Creates lots of false positives because axum requires handlers to be async
unused_async = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[workspace.lints.rust]
rust_2018_idioms = "warn"

[profile.release]
panic = "abort"
lto = "fat"
strip = true

[patch.crates-io]
maud = { git = "https://github.com/lambda-fairy/maud" }
