[workspace]
members = [
    "crates/sysdata",
    "crates/server",
    "crates/frontend",
    "crates/config",
    "crates/auth",
    "crates/hyper_ext",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
authors = ["ravenclaw900 <ravenclaw900@proton.me>"]
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
tokio = { version = "1.38.0", features = [
    "rt",
    "sync",
    "fs",
    "process",
    "macros",
] }
serde = { version = "1.0.203", features = ["derive"] }
hyper = { version = "1.3.1", features = ["http1", "server"] }
maud = "0.26.0"
tracing = "0.1.40"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
# Creates lots of false positives because axum requires handlers to be async
unused_async = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[workspace.lints.rust]
rust_2018_idioms = "warn"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
