[package]
name = "auth"
version = "0.7.0"
edition = "2021"

[dependencies]
bitcode = { version = "0.5.0", default-features = false, features = ["serde"] }
config = { version = "0.7.0", path = "../config" }
ct-codecs = "1.1.1"
ed25519-compact = { version = "2.0.4", default-features = false, features = ["random", "pem"]}
serde = { version = "1.0.193", features = ["derive"] }
