[package]
name = "auth"
version = "0.7.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcode = { version = "0.5.0", default-features = false, features = ["serde"] }
config = { version = "0.7.0", path = "../config" }
ct-codecs = "1.1.1"
ed25519-compact = { version = "2.0.4", default-features = false, features = ["random", "pem"]}
# ring is only used for SHA-512 digest, but is used because it is already in the dependency tree
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
