[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
toml_edit = { version = "0.22.13", features = [
    "serde",
    "parse",
], default-features = false }
tracing = "0.1.40"
