[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
toml_edit = { version = "0.22.13", features = [
    "serde",
    "parse",
], default-features = false }
tracing.workspace = true
