[package]
name = "frontend"
version = "0.7.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7.3", default-features = false, features = ["query"] }
humantime = "2.1.0"
iconify = "0.2.6"
maud = { version = "0.25.0", features = ["axum"] }
pretty-bytes-typed = "0.2.0"
serde = { version = "1.0.192", features = ["derive"] }
sysdata = { version = "0.7.0", path = "../sysdata" }
tokio = { version = "1.34.0", features = ["sync"] }
