[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
config = { version = "0.7.0", path = "../config" }
humantime = "2.1.0"
hyper = "1.3.1"
hyper_ext = { version = "0.7.0", path = "../hyper_ext" }
iconify = "0.2.6"
maud = { version = "0.26.0", features = ["axum"] }
pretty-bytes-typed = "0.2.0"
serde = { version = "1.0.192", features = ["derive"] }
sysdata = { version = "0.7.0", path = "../sysdata" }
tokio = { version = "1.34.0", features = ["sync"] }
tracing = "0.1.40"
