[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
config = { path = "../config" }
humantime = "2.1.0"
hyper.workspace = true
hyper_ext = { path = "../hyper_ext" }
iconify = "0.2.6"
maud.workspace = true
pretty-bytes-typed = "0.2.0"
serde.workspace = true
sysdata = { path = "../sysdata" }
tokio.workspace = true
tracing.workspace = true
