[package]
name = "hyper_ext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.80"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-tungstenite = "0.14.0"
maud = "0.26.0"
serde = "1.0.203"
serde_urlencoded = "0.7.1"
sysdata = { version = "0.7.0", path = "../sysdata" }
tokio = "1.38.0"

[lints]
workspace = true
