[package]
name = "hyper_ext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.80"
http-body-util.workspace = true
hyper.workspace = true
hyper-tungstenite = "0.14.0"
maud.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
sysdata = { path = "../sysdata" }
tokio.workspace = true

[lints]
workspace = true
