[package]
name = "hyper_ext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.80"
futures-core = "0.3.30"
http-body-util = "0.1.2"
hyper.workspace = true
hyper-util = { version = "0.1.6", features = ["tokio"] }
maud.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
tokio.workspace = true
tokio-tungstenite = "0.23.1"

[lints]
workspace = true
