[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dietpi-dashboard"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
auth = { version = "0.7.0", path = "../auth" }
config = { path = "../config" }
flexible-hyper-server-tls = "0.3.0"
frontend = { path = "../frontend" }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["service", "http1", "server"] }
hyper_ext = { version = "0.7.0", path = "../hyper_ext" }
pty-process = { version = "0.4.0", features = ["async"] }
serde = { version = "1.0.193", features = ["derive"] }
sysdata = { path = "../sysdata" }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "tracing-log",
    "ansi",
] }
