[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dietpi-dashboard"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
auth = { path = "../auth" }
config = { path = "../config" }
flexible-hyper-server-tls = "0.3.0"
frontend = { path = "../frontend" }
futures-util = "0.3.30"
http-body-util.workspace = true
hyper.workspace = true
hyper_ext = { path = "../hyper_ext" }
pty-process = { version = "0.4.0", features = ["async"] }
serde.workspace = true
sysdata = { path = "../sysdata" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "tracing-log",
    "ansi",
] }
