[package]
name = "sysdata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ephemeropt = "0.3.0"
serde.workspace = true
# sysinfo = { version = "0.30.7", default-features = false }
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", rev = "622cd8a", default-features = false }
tokio.workspace = true
