[package]
name = "system_api"
version = "0.7.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["query"] }
serde = { version = "1.0.192", features = ["derive"] }
sysdata = { version = "0.7.0", path = "../sysdata" }
tokio = { version = "1.34.0", features = ["sync"] }
